Changed blurred background to fixed, corrected rest accordingly

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -56,15 +56,16 @@ nav ul li a:hover {
 }
 
 .blurry-background {
-    position: relative;
+    position: fixed;
     width: 100%;
-    height: 45em;
+    height: 100%;
     z-index: -1;
 }
 
 .blurry-background::before {
     content: "";
     background-image: url(../images/background.png);
+    background-position: center;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -73,7 +74,7 @@ nav ul li a:hover {
 
 .title-background {
     position: absolute;
-    margin-top: 10em;
+    top: 25%;
     background-color: rgba(50, 50, 50, 0.8);
     z-index: 1;
     width: 100%;
@@ -124,9 +125,11 @@ nav ul li a:hover {
 
 footer {
     background-color: rgb(50, 50, 50);
+    position: absolute;
     font-size: 1.5em;
     width: 100%;
     color: white;
     padding: 5px 0px 5px 0px;
     text-align: center;
+    bottom: 0%;
 }
